--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,9 +6,10 @@ services:
       - "8080:8080"
     volumes:
       - .:/app
-    command: php -S 0.0.0.0:8080 -t /app
+    working_dir: /app
+    command: php -S 0.0.0.0:8080
   ngrok:
     image: "wernight/ngrok"
     ports:
       - "4040:4040"
-    command: ngrok http bot:8080
+    command: sh -c "if [ ! -z \"${NGROK_AUTH}\" ]; then ngrok authtoken ${NGROK_AUTH}; fi; ngrok http bot:8080"
