--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,17 @@
 {
   "name": "phpmx/phpmxbot",
+  "description": "phpbot",
   "type": "project",
   "require": {
     "php": "^7.4",
     "ext-json": "*",
     "ext-sqlite3": "*",
     "botman/botman": "^2.6",
-    "botman/driver-slack": "^2.2"
+    "botman/driver-slack": "^2.2",
+    "symfony/dependency-injection": "^5.1",
+    "symfony/yaml": "^5.1",
+    "symfony/config": "^5.1",
+    "symfony/dotenv": "^5.1"
   },
   "autoload": {
     "psr-4": {
@@ -19,5 +24,8 @@
       "name": "Erick Ruiz de Chavez",
       "email": "erick@erch.co"
     }
-  ]
+  ],
+  "require-dev": {
+    "symfony/var-dumper": "^5.1"
+  }
 }
