--- a/composer.json
+++ b/composer.json
@@ -36,5 +36,8 @@
   "require-dev": {
     "phpunit/phpunit": "^9.4",
     "symfony/var-dumper": "^5.1"
+  },
+  "scripts": {
+    "test": "vendor/bin/phpunit"
   }
 }
