Create first functional test

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,4 +27,18 @@ services:
     tags:
       - services
 
+  PhpMx\Application\:
+    resource: "../src/Application/*"
+    tags:
+      - application
+
+  PhpMx\Factories\:
+    resource: "../src/Factories/*"
+    tags:
+      - factories
+
+  PhpMx\Factories\ApplicationFactory:
+    arguments:
+      $containerBuilder: '@service_container'
+
   PhpMx\Router:
