--- a/.github/workflows/php.yml
+++ b/.github/workflows/php.yml
@@ -37,5 +37,8 @@ jobs:
         if: steps.composer-cache.outputs.cache-hit != 'true'
         run: composer install --prefer-dist --no-progress --no-suggest
 
+      - name: Copy .env.example
+        run: cp .env.example .env
+
       - name: Run test suite
         run: ./vendor/bin/phpunit
