Create endpoint /api/leaderboard (#37)
* #29 https://github.com/phpmx/phpmxbot/issues/29 Add kernel for Api request, add factory to separated to kind of application

* Create first functional test

* Inject Kernel through container

* Defined Controller as services

* Used .env.example on github actions

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,4 +27,28 @@ services:
     tags:
       - services
 
+  PhpMx\Application\:
+    resource: "../src/Application/*"
+    tags:
+      - application
+
+  PhpMx\Factories\:
+    resource: "../src/Factories/*"
+    tags:
+      - factories
+
+  PhpMx\Factories\ApplicationFactory:
+    arguments:
+      $containerBuilder: '@service_container'
+
+  PhpMx\Http\Kernel:
+    arguments:
+      - "%env(ENVIRONMENT)%"
+      - "%env(DEBUG)%"
+
+  PhpMx\Http\Controller\Api\:
+    resource: "../src/Http/Controller/Api/*"
+    tags:
+      - "controller.service_arguments"
+
   PhpMx\Router:
